[package]
name = "cgit-gogs-auth-filter"
version = "0.1.1"
authors = ["Varphone Wong <varphone@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
curl = "0.4"
handlebars = "3.4"
hex = "0.4"
log = "0.4"
openssl = "0.10"
rand = "0.7"
serde = { version = "1.0", features = ["derive"] }
syslog = "5.0"
toml = "0.5"
url = "2.1"

[build-dependencies]
rand = "0.7"

[profile.release]
lto = true
